--- a/product1.html
+++ b/product1.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product 1 - Sana Sana Babu Nani Online Store</title>
+    <style>
+        body {
+            font-family: 'Times New Roman', Times, serif;
+            margin: 0;
+            padding: 0;
+            }
+    </style>
     <!-- Favicon -->
     <link rel="icon" href="Pictures/SSBNOS Logo.png" type="image/png">
     <!-- External CSS -->
-    <link rel="stylesheet" href="collection.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -50,14 +56,13 @@
         <a href="contact.html"><u>Contact Us</u></a>
     </nav>
 
-    <main style="padding: 10px; background-color: #c1c5c6;">
+    <main class="product-details">
         <section id="product1">
             <h2>Long Sleeve Baby Boy Girl Bodysuit Muslin Cotton Spring 
                 Autumn Kids Baby Rompers Clothes 0-24 Months Infant Newborn Jumpsuit</h2>
-            <img src="Pictures/Dress.jpg" alt="Dress" 
-            style="width: 300px; height: 300px; margin-right: 20px;">
+            <img src="Pictures/Dress.jpg" alt="Dress" class="product-image">
             <p>Price: Rs. 500</p>
-            <button>Add to Cart</button>
+            <button class="add-to-cart-btn">Add to Cart</button>
             <br><br>
             <h3>Product Description</h3>
             <p>This adorable and comfortable one-piece bodysuit is made of high-quality cotton, 
@@ -74,7 +79,7 @@
                 <li><u>Functional:</u> Make your baby more cute and fashionable.</li>
             </ul>
             <h3>Specifications</h3>
-            <table border="1" cellpadding="10" cellspacing="0">
+            <table class="product-specs">
                 <tr>
                     <td>Material:</td>
                     <td>Muslin Cotton</td>
