--- a/product2.html
+++ b/product2.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product 2 - Sana Sana Babu Nani Online Store</title>
+    <style>
+        body {
+            font-family: 'Times New Roman', Times, serif;
+            margin: 0;
+            padding: 0;
+            }
+    </style>
     <!-- Favicon -->
     <link rel="icon" href="Pictures/SSBNOS Logo.png" type="image/png">
     <!-- External CSS -->
-    <link rel="stylesheet" href="collection.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -50,35 +56,24 @@
         <a href="contact.html"><u>Contact Us</u></a>
     </nav>
 
-    <main style="padding: 10px; background-color: #c1c5c6;">
+    <main class="product-details">
         <section id="product2">
-            <h2>Children's Summer Vest Shorts Suit Boy Blazers Clothes Performance Host Wedding Dress 
-                Kids Waistcoat Pants Bowtie Clothes Set</h2>
-            <img src="Pictures/Boy Dress.jpg" alt="Boy Dress" 
-            style="width: 300px; height: 300px; margin-right: 20px;">
+            <h2>Children's Summer Vest Shorts Suit Boy Blazers Clothes Performance Host Wedding Dress Kids Waistcoat Pants Bowtie Clothes Set</h2>
+            <img src="Pictures/Boy Dress.jpg" alt="Boy Dress" class="product-image">
             <p>Price: Rs. 350</p>
-            <button>Add to Cart</button>
+            <button class="add-to-cart-btn">Add to Cart</button>
             <br><br>
             <h3>Product Description</h3>
-            <p>This stylish and trendy vest and shorts suit is perfect for boys aged 2-4 years old. 
-                It's ideal for various occasions, including performances, weddings, and casual wear. 
-                The set includes a vest, shorts, waistcoat, pants, and a bowtie, 
-                ensuring your child looks smart and fashionable.</p>
+            <p>This stylish and trendy vest and shorts suit is perfect for boys aged 2-4 years old. It's ideal for various occasions, including performances, weddings, and casual wear. The set includes a vest, shorts, waistcoat, pants, and a bowtie, ensuring your child looks smart and fashionable.</p>
             <ul>
-                <li><u>Stylish and Trendy Design:</u> Perfect for boys aged 2-4 years old. 
-                    The floral pattern and short-sleeved shirt design 
-                    are ideal for various occasions.</li>
-                <li><u>Durable and Comfortable:</u> Made from a high-quality polyester 
-                    and cotton blend fabric, ensuring durability and comfort.</li>
-                <li><u>Versatile and Practical:</u> Suitable for children aged 1-4 years old, 
-                    designed with a patterned shirt and shorts for added versatility.</li>
-                <li><u>Customizable and Available in Various Colors:</u> Available in various 
-                    colors to match your child's personality and style.</li>
-                <li><u>Ready to Stock:</u> In-stock and available for immediate purchase, 
-                    providing the perfect outfit for your child.</li>
+                <li><u>Stylish and Trendy Design:</u> Perfect for boys aged 2-4 years old. The floral pattern and short-sleeved shirt design are ideal for various occasions.</li>
+                <li><u>Durable and Comfortable:</u> Made from a high-quality polyester and cotton blend fabric, ensuring durability and comfort.</li>
+                <li><u>Versatile and Practical:</u> Suitable for children aged 1-4 years old, designed with a patterned shirt and shorts for added versatility.</li>
+                <li><u>Customizable and Available in Various Colors:</u> Available in various colors to match your child's personality and style.</li>
+                <li><u>Ready to Stock:</u> In-stock and available for immediate purchase, providing the perfect outfit for your child.</li>
             </ul>
             <h3>Specifications</h3>
-            <table border="1" cellpadding="10" cellspacing="0">
+            <table class="product-specs">
                 <tr>
                     <td>Material:</td>
                     <td>Polyester and Cotton Blend</td>
@@ -100,9 +95,7 @@
                     <td>Multiple</td>
                 </tr>
             </table>
-
         </section>
-        
     </main>
 
     <footer style="background-color: rgb(0, 0, 0); color: rgb(255, 255, 255); padding: 10px;">
