--- a/product3.html
+++ b/product3.html
@@ -6,6 +6,13 @@
     <title>Product 3 - Sana Sana Babu Nani Online Store</title>
     <!-- Favicon -->
     <link rel="icon" href="Pictures/SSBNOS Logo.png" type="image/png">
+    <style>
+        body {
+            font-family: 'Times New Roman', Times, serif;
+            margin: 0;
+            padding: 0;
+            }
+    </style>
     <!-- External CSS -->
     <link rel="stylesheet" href="collection.css">
     <link rel="stylesheet" href="style.css">
@@ -50,14 +57,13 @@
         <a href="contact.html"><u>Contact Us</u></a>
     </nav>
 
-    <main style="padding: 10px; background-color: #c1c5c6;">
+    <main class="product-details">
         <section id="product3">
             <h2>Cute Baby Children's Socks Toddler Baby Kids Girls Solid 
                 Knee-High Socks Stockings Mid-Calf Length Princess Sock</h2>
-            <img src="Pictures/Socks.jpg" alt="Socks" 
-            style="width: 300px; height: 300px; margin-right: 20px;">
+            <img src="Pictures/Socks.jpg" alt="Socks" class="product-image">
             <p>Price: Rs. 300</p>
-            <button>Add to Cart</button>
+            <button class="add-to-cart-btn">Add to Cart</button>
             <br><br>
             <h3>Product Description</h3>
             <p>These adorable knee-high socks are perfect for toddlers and young kids. 
@@ -79,7 +85,7 @@
                 <li><u>Unit Count:</u> 1.0</li>
             </ul>
             <h3>Specifications</h3>
-            <table border="1" cellpadding="10" cellspacing="0">
+            <table class="product-specs">
                 <tr>
                     <td>Material:</td>
                     <td>80% Cotton, 15% Nylon, 5% Spandex</td>
