--- a/product4.html
+++ b/product4.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product 4 - Sana Sana Babu Nani Online Store</title>
+    <style>
+        body {
+            font-family: 'Times New Roman', Times, serif;
+            margin: 0;
+            padding: 0;
+            }
+    </style>
     <!-- Favicon -->
     <link rel="icon" href="Pictures/SSBNOS Logo.png" type="image/png">
     <!-- External CSS -->
-    <link rel="stylesheet" href="collection.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -50,13 +56,12 @@
         <a href="contact.html"><u>Contact Us</u></a>
     </nav>
 
-    <main style="padding: 10px; background-color: #c1c5c6;">
+    <main class="product-details">
         <section id="product4">
             <h2>Girls Poof Girl! Black Floral Size Small to Medium (7-8) Leggings NWOT</h2>
-            <img src="Pictures/Girl trouser.jpg" alt="Girl Trouser" 
-            style="width: 300px; height: 300px; margin-right: 20px;">
+            <img src="Pictures/Girl trouser.jpg" alt="Girl Trouser" class="product-image">
             <p>Price: Rs. 300</p>
-            <button>Add to Cart</button>
+            <button class="add-to-cart-btn">Add to Cart</button>
             <br><br>
             <h3>Product Description</h3>
             <p>This girls' leggings are made of high-quality fabric, ensuring comfort and durability. 
@@ -75,7 +80,7 @@
                     with a full refund option.</li>
             </ul>
             <h3>Specifications</h3>
-            <table border="1" cellpadding="10" cellspacing="0">
+            <table class="product-specs">
                 <tr>
                     <td>Material:</td>
                     <td>95% Polyester, 5% Spandex</td>
