--- a/seemore.html
+++ b/seemore.html
@@ -296,6 +296,241 @@
     <button id="add-to-cart-4">Add to Cart</button>
 </div>
 
+<!-- Product 1 -->
+<div class="product">
+    <a href="product1.html">
+        <img src="Pictures/Dress.jpg" alt="Long Sleeve Baby Boy Girl Bodysuit">
+    </a>
+    <h3>Long Sleeve Baby Boy Girl Bodysuit</h3>
+    <!-- Rating Stars -->
+    <div class="rate">
+        <input type="radio" id="star5" name="rate" value="5" />
+        <label for="star5" title="5 stars">5 stars</label>
+        <input type="radio" id="star4" name="rate" value="4" />
+        <label for="star4" title="4 stars">4 stars</label>
+        <input type="radio" id="star3" name="rate" value="3" />
+        <label for="star3" title="3 stars">3 stars</label>
+        <input type="radio" id="star2" name="rate" value="2" />
+        <label for="star2" title="2 stars">2 stars</label>
+        <input type="radio" id="star1" name="rate" value="1" />
+        <label for="star1" title="1 star">1 star</label>
+      </div>
+      <br>
+      <br>
+      <br>
+    <p>Rs. 500</p>
+    <a href="product1.html">
+        <button>View Details</button>
+    </a>
+    <button id="add-to-cart-1">Add to Cart</button>
+</div>
+
+    <!-- Product 2 -->
+<div class="product">
+    <a href="product2.html">
+        <img src="Pictures/Boy Dress.jpg" alt="Boy Dress">
+    </a>
+    <h3>Children's Summer Vest Shorts Suit</h3>
+    <!-- Rating Stars -->
+    <div class="rate">
+        <input type="radio" id="star5" name="rate" value="5" />
+        <label for="star5" title="5 stars">5 stars</label>
+        <input type="radio" id="star4" name="rate" value="4" />
+        <label for="star4" title="4 stars">4 stars</label>
+        <input type="radio" id="star3" name="rate" value="3" />
+        <label for="star3" title="3 stars">3 stars</label>
+        <input type="radio" id="star2" name="rate" value="2" />
+        <label for="star2" title="2 stars">2 stars</label>
+        <input type="radio" id="star1" name="rate" value="1" />
+        <label for="star1" title="1 star">1 star</label>
+      </div>
+      <br>
+      <br>
+      <br>
+    <p>Rs. 500</p>
+    <a href="product2.html">
+        <button>View Details</button>
+    </a>
+    <button id="add-to-cart-2">Add to Cart</button>
+</div>
+
+    <!-- Product 3 -->
+<div class="product">
+    <a href="product3.html">
+        <img src="Pictures/Socks.jpg" alt="Socks">
+    </a>
+    <h3>Girls Solid Knee-High Socks Stockings</h3>
+    <!-- Rating Stars -->
+    <div class="rate">
+        <input type="radio" id="star5" name="rate" value="5" />
+        <label for="star5" title="5 stars">5 stars</label>
+        <input type="radio" id="star4" name="rate" value="4" />
+        <label for="star4" title="4 stars">4 stars</label>
+        <input type="radio" id="star3" name="rate" value="3" />
+        <label for="star3" title="3 stars">3 stars</label>
+        <input type="radio" id="star2" name="rate" value="2" />
+        <label for="star2" title="2 stars">2 stars</label>
+        <input type="radio" id="star1" name="rate" value="1" />
+        <label for="star1" title="1 star">1 star</label>
+      </div>
+      <br>
+      <br>
+      <br>
+    <p>Rs. 500</p>
+    <a href="product3.html">
+        <button>View Details</button>
+    </a>
+    <button id="add-to-cart-3">Add to Cart</button>
+</div>
+
+    <!-- Product 4 -->
+    <div class="product">
+        <a href="product4.html">
+            <img src="Pictures/Girl trouser.jpg" alt="Girl Trouser">
+        </a>
+        <h3>Floral Size Small to Medium (7-8) Leggings</h3>
+        <!-- Rating Stars -->
+    <div class="rate">
+        <input type="radio" id="star5" name="rate" value="5" />
+        <label for="star5" title="5 stars">5 stars</label>
+        <input type="radio" id="star4" name="rate" value="4" />
+        <label for="star4" title="4 stars">4 stars</label>
+        <input type="radio" id="star3" name="rate" value="3" />
+        <label for="star3" title="3 stars">3 stars</label>
+        <input type="radio" id="star2" name="rate" value="2" />
+        <label for="star2" title="2 stars">2 stars</label>
+        <input type="radio" id="star1" name="rate" value="1" />
+        <label for="star1" title="1 star">1 star</label>
+      </div>
+      <br>
+      <br>
+      <br>
+        <p>Rs. 500</p>
+        <a href="product4.html">
+            <button>View Details</button>
+        </a>
+        <button id="add-to-cart-4">Add to Cart</button>
+</div>
+
+<!-- Product 5 -->
+<div class="product">
+    <a href="#product5.html">
+        <img src="https://m.media-amazon.com/images/I/71E3nNRe1uL._AC_UL1500_.jpg" alt="Boydress1">
+
+    </a>
+    <h3>Short Sleeve Bowtie Bodysuit Shirts + Suspender Shorts</h3>
+    <!-- Rating Stars -->
+<div class="rate">
+    <input type="radio" id="star5" name="rate" value="5" />
+    <label for="star5" title="5 stars">5 stars</label>
+    <input type="radio" id="star4" name="rate" value="4" />
+    <label for="star4" title="4 stars">4 stars</label>
+    <input type="radio" id="star3" name="rate" value="3" />
+    <label for="star3" title="3 stars">3 stars</label>
+    <input type="radio" id="star2" name="rate" value="2" />
+    <label for="star2" title="2 stars">2 stars</label>
+    <input type="radio" id="star1" name="rate" value="1" />
+    <label for="star1" title="1 star">1 star</label>
+  </div>
+  <br>
+  <br>
+  <br>
+    <p>Rs. 500</p>
+    <a href="#product5.html">
+        <button>View Details</button>
+    </a>
+    <button id="add-to-cart-4">Add to Cart</button>
+</div>
+
+<!-- Product 6 -->
+<div class="product">
+<a href="#product6.html">
+    <img src="https://i5.walmartimages.com/seo/Baby-Boy-12-Months-4PC-Gentleman-T-Shirt-Baby-Bowtie-Cloth-Toddler-Wedding-Pants-Boy-Suit-Vest-Sets-Boys-Outfits-Set-Toddler-Name-Brand-Clothes_26a59edc-0c82-4bde-a4cc-9d4dc60a7947.5c479aa01216712be955870a094758db.jpeg?odnHeight=640&odnWidth=640&odnBg=FFFFFF" alt="Baby Boy 12 Months 4PC Gentleman T Shirt Baby Bowtie Cloth Toddler Wedding Pants Boy Suit Vest Sets Boys Outfits&Set Toddler Name Brand Clothes">
+
+</a>
+<h3>Gentleman T Shirt Baby Bowtie Cloth Toddler Wedding Sets</h3>
+<!-- Rating Stars -->
+<div class="rate">
+<input type="radio" id="star5" name="rate" value="5" />
+<label for="star5" title="5 stars">5 stars</label>
+<input type="radio" id="star4" name="rate" value="4" />
+<label for="star4" title="4 stars">4 stars</label>
+<input type="radio" id="star3" name="rate" value="3" />
+<label for="star3" title="3 stars">3 stars</label>
+<input type="radio" id="star2" name="rate" value="2" />
+<label for="star2" title="2 stars">2 stars</label>
+<input type="radio" id="star1" name="rate" value="1" />
+<label for="star1" title="1 star">1 star</label>
+</div>
+<br>
+<br>
+<br>
+<p>Rs. 500</p>
+<a href="#product6.html">
+    <button>View Details</button>
+</a>
+<button id="add-to-cart-4">Add to Cart</button>
+</div>
+
+<!-- Product 7 -->
+<div class="product">
+<a href="#product7.html">
+<img src="https://s.alicdn.com/@sc04/kf/He248d5df55b5442684fcfcf3b96c5882n.png_720x720q50.png" alt="Image 3">
+
+</a>
+<h3>Thick Wool Cartoon Bear Jacket Vest Pants 3pcs Cotton</h3>
+<!-- Rating Stars -->
+<div class="rate">
+<input type="radio" id="star5" name="rate" value="5" />
+<label for="star5" title="5 stars">5 stars</label>
+<input type="radio" id="star4" name="rate" value="4" />
+<label for="star4" title="4 stars">4 stars</label>
+<input type="radio" id="star3" name="rate" value="3" />
+<label for="star3" title="3 stars">3 stars</label>
+<input type="radio" id="star2" name="rate" value="2" />
+<label for="star2" title="2 stars">2 stars</label>
+<input type="radio" id="star1" name="rate" value="1" />
+<label for="star1" title="1 star">1 star</label>
+</div>
+<br>
+<br>
+<br>
+<p>Rs. 500</p>
+<a href="#product7.html">
+<button>View Details</button>
+</a>
+<button id="add-to-cart-4">Add to Cart</button>
+</div>
+
+<!-- Product 8 -->
+<div class="product">
+<a href="#product8.html">
+<img src="https://www.lamaisondumonogramme.com/cdn/shop/products/la-maison-du-monogramme-embroidered-blue-baby-boy-coming-home-outfit-31552823623831_900x.jpg?v=1627983172" alt="Image 2">
+
+</a>
+<h3>White Coming Home Outfit + Full Name Blue Embroidery</h3>
+<!-- Rating Stars -->
+<div class="rate">
+<input type="radio" id="star5" name="rate" value="5" />
+<label for="star5" title="5 stars">5 stars</label>
+<input type="radio" id="star4" name="rate" value="4" />
+<label for="star4" title="4 stars">4 stars</label>
+<input type="radio" id="star3" name="rate" value="3" />
+<label for="star3" title="3 stars">3 stars</label>
+<input type="radio" id="star2" name="rate" value="2" />
+<label for="star2" title="2 stars">2 stars</label>
+<input type="radio" id="star1" name="rate" value="1" />
+<label for="star1" title="1 star">1 star</label>
+</div>
+<br>
+<br>
+<br>
+<p>Rs. 500</p>
+<a href="#product8.html">
+<button>View Details</button>
+</a>
+<button id="add-to-cart-4">Add to Cart</button>
+</div>
 
         </section>
         
