--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us - Sana Sana Babu Nani Online Store</title>
+    <title>Login - Sana Sana Babu Nani Online Store</title>
     <style>
         body {
             font-family: 'Times New Roman', Times, serif;
@@ -16,21 +17,25 @@
     <!-- External CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <header class="header-container">
-        <div class="header-flex">
-            <div class="logo-title">
-                <img src="Pictures/SSBNOS Logo.png" alt="SSBNOS Logo" class="logo">
-                <h1>Sana Sana Babu Nani Online Store</h1>
-            </div>
-            <div class="search-login">
-                <input type="text" id="search" name="search" placeholder="Search for products...">
-                <button type="submit">Search</button>
-                <div id="search-suggestions" class="suggestions-dropdown"></div>
-                <nav>
-                    <a href="login.html">Login</a> &nbsp; | &nbsp;
-                    <a href="carts.html">My Carts</a>
-                </nav>
+
+    <header>
+        <div class="header-container">
+            <div class="header-flex">
+                <div class="logo-title">
+                    <img src="Pictures/SSBNOS Logo.png" alt="SSBNOS Logo" class="logo">
+                    <h1>Sana Sana Babu Nani Online Store</h1>
+                </div>
+                <div class="search-login">
+                    <input type="text" id="search" name="search" placeholder="Search for products...">
+                    <button type="submit">Search</button>
+                    <div id="search-suggestions" class="suggestions-dropdown"></div>
+                    <nav>
+                        <a href="login.html">Login</a> &nbsp; | &nbsp;
+                        <a href="carts.html">My Carts</a>
+                    </nav>
+                </div>
             </div>
         </div>
     </header>
@@ -42,17 +47,17 @@
         <div class="dropdown">
             <button class="dropbtn"><u>Collection</u></button>
             <div class="dropdown-content">
-                <a href="#boy-dress">Boy Dress</a>
-                <a href="#girl-dress">Girl Dress</a>
-                <a href="#new-arrival">New Arrival</a>
-                <a href="#best-seller">Best Seller</a>
-                <a href="#toy">Toy</a>
+                <a href="boysdress.html">Boy Dress</a>
+                <a href="girlsdress.html">Girl Dress</a>
+                <a href="newarrival.html">New Arrival</a>
+                <a href="bestseller.html">Best Seller</a>
+                <a href="toy.html">Toy</a>
             </div>
         </div>
 
         &nbsp; | &nbsp;
         <a href="faqs.html"><u>FAQs</u></a> &nbsp; | &nbsp;
-        <a href="contact.html" class="active"><u>Contact Us</u></a>
+        <a href="contact.html"><u>Contact Us</u></a>
     </nav>
 
     <main>
