--- a/login.html
+++ b/login.html
@@ -47,11 +47,11 @@
         <div class="dropdown">
             <button class="dropbtn"><u>Collection</u></button>
             <div class="dropdown-content">
-                <a href="#boy-dress">Boy Dress</a>
-                <a href="#girl-dress">Girl Dress</a>
-                <a href="#new-arrival">New Arrival</a>
-                <a href="#best-seller">Best Seller</a>
-                <a href="#toy">Toy</a>
+                <a href="boysdress.html">Boy Dress</a>
+                <a href="girlsdress.html">Girl Dress</a>
+                <a href="newarrival.html">New Arrival</a>
+                <a href="bestseller.html">Best Seller</a>
+                <a href="toy.html">Toy</a>
             </div>
         </div>
 
