--- a/carts.html
+++ b/carts.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Carts - Sana Sana Babu Nani Online Store</title>
+    <title>Login - Sana Sana Babu Nani Online Store</title>
     <style>
         body {
             font-family: 'Times New Roman', Times, serif;
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+
     <header>
         <div class="header-container">
             <div class="header-flex">
@@ -46,11 +47,11 @@
         <div class="dropdown">
             <button class="dropbtn"><u>Collection</u></button>
             <div class="dropdown-content">
-                <a href="#boy-dress">Boy Dress</a>
-                <a href="#girl-dress">Girl Dress</a>
-                <a href="#new-arrival">New Arrival</a>
-                <a href="#best-seller">Best Seller</a>
-                <a href="#toy">Toy</a>
+                <a href="boysdress.html">Boy Dress</a>
+                <a href="girlsdress.html">Girl Dress</a>
+                <a href="newarrival.html">New Arrival</a>
+                <a href="bestseller.html">Best Seller</a>
+                <a href="toy.html">Toy</a>
             </div>
         </div>
 
