--- a/product3.html
+++ b/product3.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product 3 - Sana Sana Babu Nani Online Store</title>
-    <!-- Favicon -->
-    <link rel="icon" href="Pictures/SSBNOS Logo.png" type="image/png">
+    <title>Login - Sana Sana Babu Nani Online Store</title>
     <style>
         body {
             font-family: 'Times New Roman', Times, serif;
@@ -13,11 +12,14 @@
             padding: 0;
             }
     </style>
+    <!-- Favicon -->
+    <link rel="icon" href="Pictures/SSBNOS Logo.png" type="image/png">
     <!-- External CSS -->
-    <link rel="stylesheet" href="collection.css">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+
     <header>
         <div class="header-container">
             <div class="header-flex">
@@ -28,6 +30,7 @@
                 <div class="search-login">
                     <input type="text" id="search" name="search" placeholder="Search for products...">
                     <button type="submit">Search</button>
+                    <div id="search-suggestions" class="suggestions-dropdown"></div>
                     <nav>
                         <a href="login.html">Login</a> &nbsp; | &nbsp;
                         <a href="carts.html">My Carts</a>
@@ -44,11 +47,11 @@
         <div class="dropdown">
             <button class="dropbtn"><u>Collection</u></button>
             <div class="dropdown-content">
-                <a href="#boy-dress">Boy Dress</a>
-                <a href="#girl-dress">Girl Dress</a>
-                <a href="#new-arrival">New Arrival</a>
-                <a href="#best-seller">Best Seller</a>
-                <a href="#toy">Toy</a>
+                <a href="boysdress.html">Boy Dress</a>
+                <a href="girlsdress.html">Girl Dress</a>
+                <a href="newarrival.html">New Arrival</a>
+                <a href="bestseller.html">Best Seller</a>
+                <a href="toy.html">Toy</a>
             </div>
         </div>
 
