--- a/toy.html
+++ b/toy.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sana Sana Babu Nani Online Store</title>
+    <title>Login - Sana Sana Babu Nani Online Store</title>
     <style>
         body {
             font-family: 'Times New Roman', Times, serif;
@@ -11,10 +12,14 @@
             padding: 0;
             }
     </style>
+    <!-- Favicon -->
     <link rel="icon" href="Pictures/SSBNOS Logo.png" type="image/png">
+    <!-- External CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+
     <header>
         <div class="header-container">
             <div class="header-flex">
@@ -38,14 +43,15 @@
     <nav class="main-nav">
         <a href="index.html"><u>Home</u></a> &nbsp; | &nbsp;
 
+        <!-- Collection Dropdown -->
         <div class="dropdown">
             <button class="dropbtn"><u>Collection</u></button>
             <div class="dropdown-content">
-                <a href="#boy-dress">Boy Dress</a>
-                <a href="#girl-dress">Girl Dress</a>
-                <a href="#new-arrival">New Arrival</a>
-                <a href="#best-seller">Best Seller</a>
-                <a href="#toy">Toy</a>
+                <a href="boysdress.html">Boy Dress</a>
+                <a href="girlsdress.html">Girl Dress</a>
+                <a href="newarrival.html">New Arrival</a>
+                <a href="bestseller.html">Best Seller</a>
+                <a href="toy.html">Toy</a>
             </div>
         </div>
 
